Restore Java 8 bytecode for the 1.16.5 Forge build.